Create crud api for village
